# DeepSpeech-desktop-java-client

./: .gitignore  Dockerfile.build.tmpl
native_client/: definitions.mk
native_client/desktop-java/: Makefile  build.gradle  gradle.properties
native_client/desktop-java/libdeepspeech/: CMakeLists.txt  build.gradle  gradle.properties
native_client/desktop-java/libdeepspeech/libs/: .gitignore
native_client/desktop-java/libdeepspeech/src/main/java/org/deepspeech/libdeepspeech/: DeepSpeechModel.java
